fixed spacing on event page mock

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -315,6 +315,10 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left:10px;
+  margin-right: 10px;
 }
 .img-rounded {
   border-radius: 6px;
@@ -5987,9 +5991,10 @@ textarea:focus {
 
 td {
   text-align: center;
+  vertical-align: center;
 }
 
-.add_top_margin {
-
-  margin-top: 10px;
+th {
+  text-align: center;
+  vertical-align: center;
 }
